--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,22 @@
-.App {
-  text-align: center;
+.rt-tr { /* React table-Table row (each row in the table) */
+	text-align: center;
+	align-items: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+a {
+	text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a:hover,
+a:visited:hover {
+	color: red;
 }
 
-.App-link {
-  color: #61dafb;
+a:visited {
+	color: rgb(92, 0, 92);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.yearPublished {
+	font-size: 11px;
+	color: gray;
 }
