--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,3 +1,24 @@
+.container {
+	text-align: center;
+}
+
+.tipText {
+	text-align: center;
+	font-style: italic;
+	font-size: 13px;
+}
+
+@media only screen and (max-width: 768px) {
+	.tipText {
+	  display: none;
+	}
+  }
+
+.ReactTable {
+	margin: 0 auto;
+	max-width: 1045px;
+}
+
 .rt-tr { /* React table-Table row (each row in the table) */
 	text-align: center;
 	align-items: center;
